# guide-2.0

./: .gitignore  ARCHITECTURE.md  CHANGES_LOG.md  COMPARISON.md  DEPLOYMENT.md  FEATURE_COMPARISON.md  MANIFEST.md  PROMPT.md  REVERTED_FIXES.md  RULES.md  UI_REBUILD_CHECKLIST.md  agenticChat.js  agenticChatHelpers.js  build-output.txt  build-output2.txt  build-r37.txt  build-r37fix.txt  cloudLLMService.js  constants.js  debug-startup.js  electron-builder.nosign.cuda.json  electron-builder.nosign.json  electron-main-old.js  electron-main.js  llmEngine.js  mcpToolServer.js  model-config.json  modelProfiles.js  package-lock.json  package.json  preload-old.js  preload.js  settingsManager.js  test-ws.js  test5-check.md  webSearch.js
.github/: copilot-instructions.md
.github/media/: gen-marketing.js
.github/workflows/: build.yml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: websocket.js
frontend/src/components/: AccountPanel.jsx  ActivityBar.jsx  BottomPanel.jsx  ChatPanel.jsx  EditorArea.jsx  Layout.jsx  NewProjectDialog.jsx  Sidebar.jsx  StatusBar.jsx  ThemeProvider.jsx  TitleBar.jsx  (+1 more)
pipeline/: agenticLoop.js  contextManager.js  continuationHandler.js  conversationSummarizer.js  nativeContextStrategy.js  promptAssembler.js  regexHelpers.js  responseParser.js  rollingSummary.js  streamHandler.js
r46-test/: README.md  task_manager.py
server/: ipcBridge.js  main.js  templateHandlers.js  transport.js
src-tauri/: Cargo.toml  generate-icons.js  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+5 files in other folders)
